--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@ body {
     background-color: hsl(0, 0%, 100%);
     border-radius: 5%;
     padding: 15px;
-    box-shadow: 0 5px 10px hsl(212, 23%, 78%); /* blur de 10px ao redor do elemento. */
+    box-shadow: 0 5px 10px hsl(212, 23%, 78%);
 }
 
 .caixa .qr-code {
